--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+html { 
+  background: url(./images/background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+
 .App {
   text-align: center;
 }
